--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <title>준영 포트폴리오</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="js/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
   <div class="skip_nav">
@@ -20,18 +21,21 @@
     <a href="#">TOP</a>
   </div>
   <div id="wrap">
-    <header id="header">
-      <h1><a href="#">JJY</a></h1>
-      <nav>
-        <ul id="gnb">
-          <li><a href="#">About</a></li>
-          <li><a href="#">Skill</a></li>
-          <li><a href="#">Project</a></li>
-          <li><a href="#">Work</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <span><b>Portfolio</b>Web Pubilsher</span>
+    <header id="header" class="header_on">
+      <div class="header_inner">       
+        <nav>
+          <h1><a href="#">JJY</a></h1>
+          <ul id="gnb">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Skill</a></li>
+            <li><a href="#">Project</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <span><b>Portfolio</b>Web Publisher</span>
+      </div>
+      <button class="btn_header"></button>
     </header>
     <main id="main">
       <div class="main_visual">
@@ -101,12 +105,12 @@
         <div class="container">
           <div class="section_inner">
             <h2>Project</h2>
-            <button class="btn_project">
+            <a href="#a" class="btn_project">
               <ul>
                 <li>포트폴리오</li>
                 <li>GS그룹</li>
               </ul>
-            </button>
+            </a>
             <ul class="projects">
               <li>
                 <ul class="project_info">
