--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         <nav>
           <h1><a href="#">JJY</a></h1>
           <ul id="gnb">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Skill</a></li>
-            <li><a href="#">Project</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#"><b>Home</b>홈</a></li>
+            <li><a href="#profile"><b>Profile</b>프로필</a></li>
+            <li><a href="#skill"><b>Skill</b>스킬</a></li>
+            <li><a href="#project"><b>Project</b>프로젝트</a></li>
+            <li><a href="#work"><b>Work</b>작업</a></li>
+            <li><a href="#contact"><b>Contact</b>연락</a></li>
           </ul>
         </nav>
         <span><b>Portfolio</b>Web Publisher</span>
@@ -42,13 +43,13 @@
         <p>안녕하세요. 신입 웹퍼블리셔 <mark>준영</mark>입니다.</p>
         <span class="scrollDown"></span>
       </div>
-      <section id="about">
+      <section id="profile">
         <div class="container">
           <div class="section_inner">
-            <h2>About</h2>
+            <h2>Profile</h2>
             <div class="myInfo">
               <span class="myImg"></span>
-              <div class="profile">
+              <div class="address">
                 <span><b>장준영</b>Jang Junyoung</span>
                 <ul>
                   <li><b>연락처</b>010-7144-5866</li>
