--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <li>로고 & 아이콘 SVG 직접제작</li>
                   <li>제작기간:</li>
                 </ul>
-                <img src="img/mockup_portfolio.jpg" alt="포트폴리오 목업">
+                <img src="img/mockup_portfolio.png" alt="포트폴리오 목업">
               </li>
               <li>
                 <ul class="project_info">
