--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="#">TOP</a>
   </div>
   <div id="wrap">
-    <header id="header" class="header_on">
+    <header id="header">
       <div class="header_inner">       
         <nav>
           <h1><a href="#">JJY</a></h1>
