--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           //emailjs.send('service ID', 'template ID', 보낼 내용이 담긴 객체)
                 .then(function(response) {
                   console.log('SUCCESS!', response.status, response.text);
+		  window.alert('메일 보내기에 성공했습니다.');
                 }, function(error) {
                   console.log('FAILED...', error);
+		  window.alert('메일 보내기에 실패했습니다.');
                 });
                   
-
-
           });
           
       });
