--- a/index.html
+++ b/index.html
@@ -76,23 +76,25 @@
       <button class="btn_header"></button>
     </header>
     <main id="main">
-      <div class="main_visual sec">
+      <div class="main_visual">
         <h1 class="tlt"  data-in-effect="rollIn" data-in-shuffle="true" data-out-effect="fadeOut" data-out-shuffle="true">안녕하세요. 신입 웹퍼블리셔 준영입니다.</h1>
         <span class="scrollDown"></span>
       </div>
-      <section id="profile" class="sec">
+      <section id="profile">
         <div class="container">
           <div class="section_inner">
             <h2>Profile</h2>
             <div class="myInfo">
-              <span class="myImg"></span>
-              <div class="address">
-                <span><b>장준영</b>Jang Junyoung</span>
-                <ul>
-                  <li><b>연락처</b>010-7144-5866</li>
-                  <li><b>이메일</b>jyjang1222@naver.com</li>
-                </ul>
-              </div>
+              <div class="myImg_addr_wrap">
+                <span class="myImg"></span>
+                <div class="address">
+                  <span><b>장준영</b>Jang Junyoung</span>
+                  <ul>
+                    <li><b>연락처</b>010-7144-5866</li>
+                    <li><b>이메일</b>jyjang1222@naver.com</li>
+                  </ul>
+                </div><!-- //address -->
+              </div><!-- //myImg_addr_wrap -->
               <ul class="career">
                 <li>웹콘텐츠 
                   전문가 양성 능력단위 평가 최우수 수상</li>
@@ -102,7 +104,7 @@
           </div><!-- //section_inner -->
         </div><!-- //container -->
       </section><!-- //#about -->
-      <section id="skill" class="sec">
+      <section id="skill">
         <div class="container">
           <div class="section_inner">
             <h2>Skill</h2>
@@ -135,7 +137,7 @@
           </div><!-- //section_inner-->
         </div><!-- //container -->
       </section><!-- //#skill -->
-      <section id="project" class="sec">
+      <section id="project">
         <div class="container">
           <div class="section_inner">
             <h2>Project</h2>
@@ -171,10 +173,10 @@
           </div><!-- //section_inner -->
         </div><!-- //container -->
       </section><!-- //#project -->
-      <section id="work" class="sec">
+      <section id="work">
         <div class="container">
           <h2>Work</h2>
-          <ul>
+          <ul class="work_list">
             <li><a href="img/work_medipreview.png" data-lightbox="image-1" data-title="메디프리뷰 전단지"></a></li>
             <li><a href="img/work_calendar.png"  data-lightbox="image-2" data-title="캘린더 겨울 디자인"></a></li>
             <li><a href="img/work_band_banner.png"  data-lightbox="image-3" data-title="띠배너 디자인"></a></li>
