--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
               <ul>
                 <li class="current_proj">포트폴리오</li>
                 <li>GS그룹</li>
+                <li>두산밥캣 (작업중)</li>
                 <li class="close_proj">닫기</li>
               </ul>
             </a>
@@ -168,6 +169,15 @@
                   <a href="https://jyjang1222.github.io/gs/" target="_blank">보러가기</a>
                 </div>
                 <img src="img/mockup_gs.png" alt="GS그룹 목업">
+              </div>
+              <div class="project project3">
+                <div class="projInfo_wrap">
+                  <ul class="proj_info">
+                    <li>개인 프로젝트</li>
+                  </ul>
+                  <a href="https://jyjang1222.github.io/bobcat/" target="_blank">보러가기</a>
+                </div>
+                <img src="img/mockup_bobcat.png" alt="두산밥캣 목업">
               </div>
             </div><!-- //projects -->
           </div><!-- //section_inner -->
